--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "amazeelabs/graphql-metatag",
+  "name": "drupal/graphql-metatag",
   "type": "drupal-module",
   "description": "Exposes the Drupal Metatag data through GraphQL schema.",
   "homepage": "https://github.com/AmazeeLabs/graphql-metatag",
